--- a/ls-qpack/Cargo.toml
+++ b/ls-qpack/Cargo.toml
@@ -12,4 +12,4 @@ workspace = ".."
 
 [dependencies]
 libc = "0.2.146"
-ls-qpack-sys = { path = "../ls-qpack-sys" }
+ls-qpack-sys = { version = "0.1.3", path = "../ls-qpack-sys" }
